--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@testing-library/user-event": "^7.1.2",
     "date-fns": "^2.14.0",
     "final-form": "^4.19.1",
+    "html-pdf": "^2.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "markdown-to-jsx": "^6.11.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-final-form": "^6.4.0",
